# ansible-role-kopia_install

./: .gitignore  .pre-commit-config.yaml  README.md  mise.local.toml-example  mise.toml-example  pyproject.toml  test.sh
defaults/main/: kopia.yml  kopia_details.yml  kopia_install.yml  main.yml
handlers/: main.yml
meta/: main.yml
molecule/: Dockerfile.debian  Dockerfile.fedora  requirements.yml
molecule/default/: converge.yml  molecule.yml
molecule/install_uninstall/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml
tasks/: install_Debian.yml  main.yml  main_Debian.yml  main_RedHat.yml
tests/: install.yml  inventory  test.yml  uninstall.yml
tests/inventory/: hosts.yml
vars/: main.yml
